--- a/public/output.css
+++ b/public/output.css
@@ -607,16 +607,16 @@ video {
   position: relative;
 }
 
-.top-\[2\.1rem\] {
-  top: 2.1rem;
-}
-
 .right-2 {
   right: 0.5rem;
 }
 
 .top-1\/2 {
   top: 50%;
+}
+
+.top-\[2\.1rem\] {
+  top: 2.1rem;
 }
 
 .mb-1 {
@@ -627,8 +627,8 @@ video {
   margin-left: 0.25rem;
 }
 
-.ml-24 {
-  margin-left: 6rem;
+.ml-20 {
+  margin-left: 5rem;
 }
 
 .ml-3 {
@@ -695,10 +695,6 @@ video {
   margin-top: 5.7rem;
 }
 
-.ml-20 {
-  margin-left: 5rem;
-}
-
 .flex {
   display: flex;
 }
@@ -711,24 +707,14 @@ video {
   display: none;
 }
 
-.size-6 {
-  width: 1.5rem;
-  height: 1.5rem;
-}
-
-.size-7 {
-  width: 1.75rem;
-  height: 1.75rem;
+.size-8 {
+  width: 2rem;
+  height: 2rem;
 }
 
 .size-9 {
   width: 2.25rem;
   height: 2.25rem;
-}
-
-.size-8 {
-  width: 2rem;
-  height: 2rem;
 }
 
 .h-10 {
@@ -763,16 +749,16 @@ video {
   width: 7rem;
 }
 
-.w-6 {
-  width: 1.5rem;
-}
-
 .w-64 {
   width: 16rem;
 }
 
 .w-7 {
   width: 1.75rem;
+}
+
+.w-80 {
+  width: 20rem;
 }
 
 .w-9 {
@@ -783,8 +769,8 @@ video {
   width: 10.5rem;
 }
 
-.w-\[19rem\] {
-  width: 19rem;
+.w-\[14rem\] {
+  width: 14rem;
 }
 
 .w-\[4\.15rem\] {
@@ -797,26 +783,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[14rem\] {
-  width: 14rem;
-}
-
-.w-\[22rem\] {
-  width: 22rem;
-}
-
-.w-\[21rem\] {
-  width: 21rem;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
-.flex-1 {
-  flex: 1 1 0%;
 }
 
 .-translate-y-1\/2 {
@@ -920,9 +886,9 @@ video {
   padding-right: 3rem;
 }
 
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
+.px-14 {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
 }
 
 .px-4 {
@@ -935,9 +901,9 @@ video {
   padding-right: 1.25rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-28 {
@@ -948,31 +914,6 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
-.px-9 {
-  padding-left: 2.25rem;
-  padding-right: 2.25rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.px-14 {
-  padding-left: 3.5rem;
-  padding-right: 3.5rem;
 }
 
 .pb-4 {
@@ -991,16 +932,16 @@ video {
   padding-left: 0.5rem;
 }
 
+.pr-12 {
+  padding-right: 3rem;
+}
+
 .pt-20 {
   padding-top: 5rem;
 }
 
 .pt-4 {
   padding-top: 1rem;
-}
-
-.pr-12 {
-  padding-right: 3rem;
 }
 
 .text-center {
@@ -1041,6 +982,11 @@ video {
   font-size: 1.51rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -1048,6 +994,10 @@ video {
 
 .font-bold {
   font-weight: 700;
+}
+
+.font-light {
+  font-weight: 300;
 }
 
 .font-medium {
