--- a/public/output.css
+++ b/public/output.css
@@ -607,14 +607,6 @@ video {
   position: relative;
 }
 
-.right-2 {
-  right: 0.5rem;
-}
-
-.top-1\/2 {
-  top: 50%;
-}
-
 .top-\[2\.1rem\] {
   top: 2.1rem;
 }
@@ -679,10 +671,6 @@ video {
   margin-top: .35rem;
 }
 
-.mt-\[\.65rem\] {
-  margin-top: .65rem;
-}
-
 .mt-\[1\.2rem\] {
   margin-top: 1.2rem;
 }
@@ -693,6 +681,14 @@ video {
 
 .mt-\[5\.7rem\] {
   margin-top: 5.7rem;
+}
+
+.mt-\[\.15rem\] {
+  margin-top: .15rem;
+}
+
+.mt-\[\.1rem\] {
+  margin-top: .1rem;
 }
 
 .flex {
@@ -707,18 +703,18 @@ video {
   display: none;
 }
 
+.size-7 {
+  width: 1.75rem;
+  height: 1.75rem;
+}
+
 .size-8 {
   width: 2rem;
   height: 2rem;
 }
 
-.size-9 {
-  width: 2.25rem;
-  height: 2.25rem;
-}
-
-.h-10 {
-  height: 2.5rem;
+.h-3 {
+  height: 0.75rem;
 }
 
 .h-52 {
@@ -733,16 +729,16 @@ video {
   height: 1.75rem;
 }
 
+.h-8 {
+  height: 2rem;
+}
+
 .h-9 {
   height: 2.25rem;
 }
 
 .h-screen {
   height: 100vh;
-}
-
-.w-10 {
-  width: 2.5rem;
 }
 
 .w-28 {
@@ -757,10 +753,6 @@ video {
   width: 1.75rem;
 }
 
-.w-80 {
-  width: 20rem;
-}
-
 .w-9 {
   width: 2.25rem;
 }
@@ -769,8 +761,8 @@ video {
   width: 10.5rem;
 }
 
-.w-\[14rem\] {
-  width: 14rem;
+.w-\[15\.5rem\] {
+  width: 15.5rem;
 }
 
 .w-\[4\.15rem\] {
@@ -785,13 +777,8 @@ video {
   width: 100%;
 }
 
-.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.max-w-96 {
+  max-width: 24rem;
 }
 
 .grid-cols-2 {
@@ -814,16 +801,20 @@ video {
   justify-content: center;
 }
 
+.gap-20 {
+  gap: 5rem;
+}
+
 .place-self-center {
   place-self: center;
 }
 
-.rounded-\[\.225rem\] {
-  border-radius: .225rem;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border-\[1px\] {
@@ -886,9 +877,9 @@ video {
   padding-right: 3rem;
 }
 
-.px-14 {
-  padding-left: 3.5rem;
-  padding-right: 3.5rem;
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 
 .px-4 {
@@ -901,9 +892,9 @@ video {
   padding-right: 1.25rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .py-28 {
@@ -914,6 +905,16 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
 .pb-4 {
@@ -970,16 +971,17 @@ video {
   font-size: 1.1rem;
 }
 
-.text-\[1\.28rem\] {
-  font-size: 1.28rem;
-}
-
 .text-\[1\.29rem\] {
   font-size: 1.29rem;
 }
 
 .text-\[1\.51rem\] {
   font-size: 1.51rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .text-lg {
@@ -1067,6 +1069,10 @@ video {
     format("woff2");
 }
 
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
+}
+
 @media (min-width: 1024px) {
   .lg\:mb-\[3\.75rem\] {
     margin-bottom: 3.75rem;
@@ -1110,6 +1116,10 @@ video {
 
   .lg\:grid {
     display: grid;
+  }
+
+  .lg\:hidden {
+    display: none;
   }
 
   .lg\:h-\[13\.25rem\] {
@@ -1225,6 +1235,22 @@ video {
   }
 }
 
+@media (min-width: 1280px) {
+  .xl\:hidden {
+    display: none;
+  }
+
+  .xl\:px-96 {
+    padding-left: 24rem;
+    padding-right: 24rem;
+  }
+
+  .xl\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+}
+
 @media (min-width: 1440px) {
   .\32xl\:mb-16 {
     margin-bottom: 4rem;
@@ -1240,6 +1266,18 @@ video {
 
   .\32xl\:ml-\[28\.6rem\] {
     margin-left: 28.6rem;
+  }
+
+  .\32xl\:mr-0 {
+    margin-right: 0px;
+  }
+
+  .\32xl\:mr-4 {
+    margin-right: 1rem;
+  }
+
+  .\32xl\:mr-8 {
+    margin-right: 2rem;
   }
 
   .\32xl\:mt-0 {
@@ -1278,12 +1316,20 @@ video {
     display: none;
   }
 
+  .\32xl\:h-12 {
+    height: 3rem;
+  }
+
   .\32xl\:h-2 {
     height: 0.5rem;
   }
 
   .\32xl\:h-\[3\.15rem\] {
     height: 3.15rem;
+  }
+
+  .\32xl\:w-40 {
+    width: 10rem;
   }
 
   .\32xl\:w-96 {
@@ -1338,6 +1384,11 @@ video {
     justify-content: center;
   }
 
+  .\32xl\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
   .\32xl\:px-24 {
     padding-left: 6rem;
     padding-right: 6rem;
@@ -1375,6 +1426,10 @@ video {
     padding-bottom: 7.3rem;
   }
 
+  .\32xl\:pl-5 {
+    padding-left: 1.25rem;
+  }
+
   .\32xl\:pt-40 {
     padding-top: 10rem;
   }
@@ -1386,6 +1441,11 @@ video {
   .\32xl\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .\32xl\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .\32xl\:text-\[\.97rem\] {
