--- a/public/output.css
+++ b/public/output.css
@@ -1029,6 +1029,10 @@ video {
     margin-left: 20rem;
   }
 
+  .md\:grid {
+    display: grid;
+  }
+
   .md\:w-72 {
     width: 18rem;
   }
@@ -1043,6 +1047,35 @@ video {
 
   .md\:w-\[22rem\] {
     width: 22rem;
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:px-28 {
+    padding-left: 7rem;
+    padding-right: 7rem;
+  }
+
+  .md\:px-36 {
+    padding-left: 9rem;
+    padding-right: 9rem;
+  }
+
+  .md\:px-32 {
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
+
+  .md\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .md\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
   }
 
   .md\:pr-16 {
