--- a/public/output.css
+++ b/public/output.css
@@ -569,7 +569,7 @@ video {
   content: 'screen: _';
 }
 
-@media (min-width: 640px) {
+@media (min-width: 432px) {
   .debug-screens::before {
     content: 'screen: sm';
   }
@@ -663,6 +663,10 @@ video {
   margin-top: 3.3rem;
 }
 
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
@@ -737,8 +741,12 @@ video {
   max-width: 24rem;
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+}
+
+.grid-rows-\[auto\2c auto\] {
+  grid-template-rows: auto auto;
 }
 
 .flex-row {
@@ -992,6 +1000,10 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-gray {
+  color: #FFFFFF70;
+}
+
 .shadow-\[0px_7px_20px_2px_\#b9c3cc\] {
   --tw-shadow: 0px 7px 20px 2px #b9c3cc;
   --tw-shadow-colored: 0px 7px 20px 2px var(--tw-shadow-color);
@@ -1016,29 +1028,95 @@ video {
   cursor: pointer;
 }
 
+@media (min-width: 432px) {
+  .sm\:hidden {
+    display: none;
+  }
+}
+
 @media (min-width: 768px) {
   .md\:ml-80 {
     margin-left: 20rem;
+  }
+
+  .md\:mt-12 {
+    margin-top: 3rem;
+  }
+
+  .md\:mt-3 {
+    margin-top: 0.75rem;
+  }
+
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .md\:mt-20 {
+    margin-top: 5rem;
+  }
+
+  .md\:mr-12 {
+    margin-right: 3rem;
+  }
+
+  .md\:mr-72 {
+    margin-right: 18rem;
+  }
+
+  .md\:mr-64 {
+    margin-right: 16rem;
+  }
+
+  .md\:mr-\[17rem\] {
+    margin-right: 17rem;
+  }
+
+  .md\:mr-\[16\.5rem\] {
+    margin-right: 16.5rem;
+  }
+
+  .md\:mr-60 {
+    margin-right: 15rem;
   }
 
   .md\:grid {
     display: grid;
   }
 
-  .md\:w-20 {
-    width: 5rem;
+  .md\:h-20 {
+    height: 5rem;
   }
 
-  .md\:w-\[21rem\] {
-    width: 21rem;
+  .md\:h-16 {
+    height: 4rem;
   }
 
   .md\:w-16 {
     width: 4rem;
   }
 
+  .md\:w-\[21rem\] {
+    width: 21rem;
+  }
+
+  .md\:w-\[41\.6rem\] {
+    width: 41.6rem;
+  }
+
+  .md\:w-40 {
+    width: 10rem;
+  }
+
+  .md\:w-36 {
+    width: 9rem;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
   .md\:px-16 {
@@ -1046,9 +1124,60 @@ video {
     padding-right: 4rem;
   }
 
+  .md\:pl-20 {
+    padding-left: 5rem;
+  }
+
+  .md\:pl-32 {
+    padding-left: 8rem;
+  }
+
+  .md\:pl-36 {
+    padding-left: 9rem;
+  }
+
+  .md\:pl-3 {
+    padding-left: 0.75rem;
+  }
+
+  .md\:pl-\[8\.5rem\] {
+    padding-left: 8.5rem;
+  }
+
+  .md\:pl-\[8\.4rem\] {
+    padding-left: 8.4rem;
+  }
+
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .md\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .md\:font-medium {
+    font-weight: 500;
+  }
+
+  .md\:font-semibold {
+    font-weight: 600;
+  }
+
+  .md\:font-bold {
+    font-weight: 700;
   }
 }
 
@@ -1077,10 +1206,6 @@ video {
     margin-top: 0px;
   }
 
-  .lg\:mt-12 {
-    margin-top: 3rem;
-  }
-
   .lg\:mt-3 {
     margin-top: 0.75rem;
   }
@@ -1093,10 +1218,6 @@ video {
     margin-top: .1rem;
   }
 
-  .lg\:grid {
-    display: grid;
-  }
-
   .lg\:hidden {
     display: none;
   }
@@ -1107,14 +1228,6 @@ video {
 
   .lg\:w-\[31rem\] {
     width: 31rem;
-  }
-
-  .lg\:w-\[41\.6rem\] {
-    width: 41.6rem;
-  }
-
-  .lg\:grid-cols-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
   .lg\:flex-col {
@@ -1180,16 +1293,8 @@ video {
     line-height: 1.75rem;
   }
 
-  .lg\:font-medium {
-    font-weight: 500;
-  }
-
   .lg\:font-normal {
     font-weight: 400;
-  }
-
-  .lg\:font-semibold {
-    font-weight: 600;
   }
 }
 
@@ -1256,6 +1361,10 @@ video {
 
   .\32xl\:mt-\[\.65rem\] {
     margin-top: .65rem;
+  }
+
+  .\32xl\:mt-12 {
+    margin-top: 3rem;
   }
 
   .\32xl\:flex {
