--- a/public/output.css
+++ b/public/output.css
@@ -643,10 +643,6 @@ video {
   margin-top: 1.5rem;
 }
 
-.mt-7 {
-  margin-top: 1.75rem;
-}
-
 .mt-\[\.1rem\] {
   margin-top: .1rem;
 }
@@ -872,6 +868,11 @@ video {
   padding-bottom: 1rem;
 }
 
+.px-24 {
+  padding-left: 6rem;
+  padding-right: 6rem;
+}
+
 .pb-4 {
   padding-bottom: 1rem;
 }
@@ -896,8 +897,24 @@ video {
   padding-top: 1rem;
 }
 
+.pb-7 {
+  padding-bottom: 1.75rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
+.pb-20 {
+  padding-bottom: 5rem;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .font-GT-America {
@@ -912,14 +929,6 @@ video {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
-}
-
-.text-\[1\.08rem\] {
-  font-size: 1.08rem;
-}
-
-.text-\[1\.1rem\] {
-  font-size: 1.1rem;
 }
 
 .text-\[1\.29rem\] {
@@ -943,6 +952,11 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-bold {
@@ -1031,44 +1045,40 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:mb-2 {
+    margin-bottom: 0.5rem;
+  }
+
   .md\:ml-80 {
     margin-left: 20rem;
   }
 
-  .md\:mr-60 {
-    margin-right: 15rem;
+  .md\:mr-64 {
+    margin-right: 16rem;
   }
 
-  .md\:mt-3 {
-    margin-top: 0.75rem;
-  }
-
-  .md\:mt-12 {
-    margin-top: 3rem;
+  .md\:mt-1 {
+    margin-top: 0.25rem;
   }
 
   .md\:mt-11 {
     margin-top: 2.75rem;
   }
 
-  .md\:mt-5 {
-    margin-top: 1.25rem;
-  }
-
-  .md\:mt-8 {
-    margin-top: 2rem;
-  }
-
   .md\:mt-7 {
     margin-top: 1.75rem;
   }
 
-  .md\:mt-6 {
-    margin-top: 1.5rem;
+  .md\:mr-60 {
+    margin-right: 15rem;
   }
 
-  .md\:mt-\[1\.4rem\] {
-    margin-top: 1.4rem;
+  .md\:mb-1 {
+    margin-bottom: 0.25rem;
+  }
+
+  .md\:mb-1\.5 {
+    margin-bottom: 0.375rem;
   }
 
   .md\:grid {
@@ -1099,8 +1109,12 @@ video {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .md\:grid-cols-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr));
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .md\:px-16 {
@@ -1113,8 +1127,13 @@ video {
     padding-right: 2rem;
   }
 
-  .md\:pl-\[8\.4rem\] {
-    padding-left: 8.4rem;
+  .md\:py-28 {
+    padding-top: 7rem;
+    padding-bottom: 7rem;
+  }
+
+  .md\:pl-\[10\.4rem\] {
+    padding-left: 10.4rem;
   }
 
   .md\:text-4xl {
@@ -1122,14 +1141,19 @@ video {
     line-height: 2.5rem;
   }
 
-  .md\:text-xs {
-    font-size: 0.75rem;
-    line-height: 1rem;
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
   .md\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+
+  .md\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 
   .md\:font-bold {
@@ -1186,11 +1210,6 @@ video {
     justify-content: center;
   }
 
-  .lg\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-
   .lg\:px-\[3\.8rem\] {
     padding-left: 3.8rem;
     padding-right: 3.8rem;
@@ -1199,11 +1218,6 @@ video {
   .lg\:px-\[9\.5rem\] {
     padding-left: 9.5rem;
     padding-right: 9.5rem;
-  }
-
-  .lg\:py-40 {
-    padding-top: 10rem;
-    padding-bottom: 10rem;
   }
 
   .lg\:py-5 {
