--- a/public/output.css
+++ b/public/output.css
@@ -733,28 +733,16 @@ video {
   width: 100%;
 }
 
-.max-w-96 {
-  max-width: 24rem;
-}
-
-.max-w-\[25rem\] {
-  max-width: 25rem;
-}
-
-.max-w-\[26rem\] {
-  max-width: 26rem;
-}
-
-.max-w-\[28rem\] {
-  max-width: 28rem;
-}
-
 .max-w-\[27rem\] {
   max-width: 27rem;
 }
 
-.max-w-full {
-  max-width: 100%;
+.max-w-\[31rem\] {
+  max-width: 31rem;
+}
+
+.max-w-\[38rem\] {
+  max-width: 38rem;
 }
 
 .grid-rows-\[auto\2c auto\] {
@@ -789,8 +777,20 @@ video {
   border-radius: 0.5rem;
 }
 
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-\[\.2rem\] {
+  border-radius: .2rem;
+}
+
+.rounded-\[\.3rem\] {
+  border-radius: .3rem;
 }
 
 .border-\[1px\] {
@@ -823,6 +823,11 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(25 26 27 / var(--tw-border-opacity));
+}
+
 .bg-\[\#161616\] {
   --tw-bg-opacity: 1;
   background-color: rgb(22 22 22 / var(--tw-bg-opacity));
@@ -846,6 +851,11 @@ video {
 .bg-blue-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(76 95 213 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .px-10 {
@@ -1095,10 +1105,6 @@ video {
     width: 41.6rem;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1238,97 +1244,40 @@ video {
 }
 
 @media (min-width: 1280px) {
-  .xl\:mr-32 {
-    margin-right: 8rem;
-  }
-
-  .xl\:mr-48 {
-    margin-right: 12rem;
-  }
-
-  .xl\:mr-60 {
-    margin-right: 15rem;
-  }
-
-  .xl\:mr-80 {
-    margin-right: 20rem;
-  }
-
-  .xl\:ml-96 {
-    margin-left: 24rem;
-  }
-
-  .xl\:mr-96 {
-    margin-right: 24rem;
-  }
-
-  .xl\:ml-0 {
-    margin-left: 0px;
-  }
-
-  .xl\:ml-20 {
-    margin-left: 5rem;
-  }
-
-  .xl\:ml-56 {
-    margin-left: 14rem;
+  .xl\:ml-4 {
+    margin-left: 1rem;
   }
 
   .xl\:ml-64 {
     margin-left: 16rem;
   }
 
-  .xl\:ml-72 {
-    margin-left: 18rem;
+  .xl\:mr-5 {
+    margin-right: 1.25rem;
   }
 
-  .xl\:ml-80 {
-    margin-left: 20rem;
-  }
-
-  .xl\:ml-\[19rem\] {
-    margin-left: 19rem;
-  }
-
-  .xl\:ml-60 {
-    margin-left: 15rem;
-  }
-
-  .xl\:ml-4 {
-    margin-left: 1rem;
+  .xl\:mr-96 {
+    margin-right: 24rem;
   }
 
   .xl\:mt-0 {
     margin-top: 0px;
   }
 
-  .xl\:mt-24 {
-    margin-top: 6rem;
-  }
-
   .xl\:mt-20 {
     margin-top: 5rem;
   }
 
-  .xl\:mr-8 {
-    margin-right: 2rem;
+  .xl\:mt-12 {
+    margin-top: 3rem;
   }
 
-  .xl\:mr-6 {
-    margin-right: 1.5rem;
-  }
-
-  .xl\:mr-5 {
-    margin-right: 1.25rem;
+  .xl\:mt-11 {
+    margin-top: 2.75rem;
   }
 
   .xl\:hidden {
     display: none;
-  }
-
-  .xl\:size-12 {
-    width: 3rem;
-    height: 3rem;
   }
 
   .xl\:size-10 {
@@ -1349,44 +1298,48 @@ video {
     height: 3.5rem;
   }
 
-  .xl\:h-12 {
-    height: 3rem;
-  }
-
-  .xl\:h-28 {
-    height: 7rem;
-  }
-
-  .xl\:w-40 {
-    width: 10rem;
-  }
-
-  .xl\:w-full {
-    width: 100%;
+  .xl\:h-16 {
+    height: 4rem;
   }
 
   .xl\:w-12 {
     width: 3rem;
   }
 
-  .xl\:px-96 {
-    padding-left: 24rem;
-    padding-right: 24rem;
+  .xl\:w-40 {
+    width: 10rem;
   }
 
-  .xl\:px-9 {
-    padding-left: 2.25rem;
-    padding-right: 2.25rem;
+  .xl\:w-72 {
+    width: 18rem;
   }
 
-  .xl\:px-7 {
-    padding-left: 1.75rem;
-    padding-right: 1.75rem;
+  .xl\:w-96 {
+    width: 24rem;
   }
 
-  .xl\:px-11 {
-    padding-left: 2.75rem;
-    padding-right: 2.75rem;
+  .xl\:w-full {
+    width: 100%;
+  }
+
+  .xl\:w-80 {
+    width: 20rem;
+  }
+
+  .xl\:w-\[22rem\] {
+    width: 22rem;
+  }
+
+  .xl\:w-\[23rem\] {
+    width: 23rem;
+  }
+
+  .xl\:grid-cols-\[auto\2c auto\] {
+    grid-template-columns: auto auto;
+  }
+
+  .xl\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .xl\:px-12 {
@@ -1394,9 +1347,19 @@ video {
     padding-right: 3rem;
   }
 
-  .xl\:px-14 {
-    padding-left: 3.5rem;
-    padding-right: 3.5rem;
+  .xl\:px-36 {
+    padding-left: 9rem;
+    padding-right: 9rem;
+  }
+
+  .xl\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .xl\:px-96 {
+    padding-left: 24rem;
+    padding-right: 24rem;
   }
 
   .xl\:py-4 {
@@ -1409,45 +1372,33 @@ video {
     padding-bottom: 11rem;
   }
 
-  .xl\:py-52 {
-    padding-top: 13rem;
-    padding-bottom: 13rem;
+  .xl\:px-32 {
+    padding-left: 8rem;
+    padding-right: 8rem;
   }
 
-  .xl\:py-48 {
-    padding-top: 12rem;
-    padding-bottom: 12rem;
+  .xl\:px-28 {
+    padding-left: 7rem;
+    padding-right: 7rem;
   }
 
-  .xl\:px-5 {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
+  .xl\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
   }
 
-  .xl\:py-0 {
-    padding-top: 0px;
-    padding-bottom: 0px;
+  .xl\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 
-  .xl\:pl-6 {
-    padding-left: 1.5rem;
-  }
-
-  .xl\:pl-5 {
-    padding-left: 1.25rem;
-  }
-
-  .xl\:pl-3 {
-    padding-left: 0.75rem;
+  .xl\:px-80 {
+    padding-left: 20rem;
+    padding-right: 20rem;
   }
 
   .xl\:pl-4 {
     padding-left: 1rem;
-  }
-
-  .xl\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
   }
 
   .xl\:text-2xl {
@@ -1455,9 +1406,24 @@ video {
     line-height: 2rem;
   }
 
-  .xl\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
+  .xl\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .xl\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .xl\:placeholder\:text-xl::-moz-placeholder {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .xl\:placeholder\:text-xl::placeholder {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
@@ -1528,10 +1494,6 @@ video {
 
   .\32xl\:h-\[3\.15rem\] {
     height: 3.15rem;
-  }
-
-  .\32xl\:h-16 {
-    height: 4rem;
   }
 
   .\32xl\:w-40 {
@@ -1630,10 +1592,6 @@ video {
 
   .\32xl\:pb-\[7\.3rem\] {
     padding-bottom: 7.3rem;
-  }
-
-  .\32xl\:pl-5 {
-    padding-left: 1.25rem;
   }
 
   .\32xl\:pt-40 {
