--- a/public/output.css
+++ b/public/output.css
@@ -1334,12 +1334,30 @@ video {
     width: 23rem;
   }
 
+  .xl\:w-20 {
+    width: 5rem;
+  }
+
   .xl\:grid-cols-\[auto\2c auto\] {
     grid-template-columns: auto auto;
   }
 
   .xl\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .xl\:gap-0 {
+    gap: 0px;
+  }
+
+  .xl\:gap-x-4 {
+    -moz-column-gap: 1rem;
+         column-gap: 1rem;
+  }
+
+  .xl\:gap-x-1 {
+    -moz-column-gap: 0.25rem;
+         column-gap: 0.25rem;
   }
 
   .xl\:px-12 {
