--- a/public/output.css
+++ b/public/output.css
@@ -733,14 +733,6 @@ video {
   width: 100%;
 }
 
-.max-w-\[27rem\] {
-  max-width: 27rem;
-}
-
-.max-w-\[31rem\] {
-  max-width: 31rem;
-}
-
 .max-w-\[38rem\] {
   max-width: 38rem;
 }
@@ -773,24 +765,16 @@ video {
   place-self: center;
 }
 
+.rounded-\[\.3rem\] {
+  border-radius: .3rem;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
 
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded-\[\.2rem\] {
-  border-radius: .2rem;
-}
-
-.rounded-\[\.3rem\] {
-  border-radius: .3rem;
 }
 
 .border-\[1px\] {
@@ -809,9 +793,9 @@ video {
   border-style: solid;
 }
 
-.border-black-200 {
+.border-black {
   --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+  border-color: rgb(25 26 27 / var(--tw-border-opacity));
 }
 
 .border-gray {
@@ -821,11 +805,6 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(25 26 27 / var(--tw-border-opacity));
 }
 
 .bg-\[\#161616\] {
@@ -1061,12 +1040,16 @@ video {
     margin-bottom: 0.375rem;
   }
 
+  .md\:ml-1 {
+    margin-left: 0.25rem;
+  }
+
   .md\:ml-80 {
     margin-left: 20rem;
   }
 
-  .md\:mr-60 {
-    margin-right: 15rem;
+  .md\:mr-10 {
+    margin-right: 2.5rem;
   }
 
   .md\:mt-1 {
@@ -1077,108 +1060,28 @@ video {
     margin-top: 2.75rem;
   }
 
-  .md\:mt-7 {
-    margin-top: 1.75rem;
-  }
-
-  .md\:mt-24 {
-    margin-top: 6rem;
-  }
-
-  .md\:mt-36 {
-    margin-top: 9rem;
-  }
-
-  .md\:mt-48 {
-    margin-top: 12rem;
-  }
-
-  .md\:mr-10 {
-    margin-right: 2.5rem;
-  }
-
-  .md\:mr-12 {
-    margin-right: 3rem;
-  }
-
-  .md\:ml-11 {
-    margin-left: 2.75rem;
-  }
-
-  .md\:ml-9 {
-    margin-left: 2.25rem;
-  }
-
-  .md\:ml-0 {
-    margin-left: 0px;
-  }
-
-  .md\:ml-4 {
-    margin-left: 1rem;
-  }
-
-  .md\:ml-3 {
-    margin-left: 0.75rem;
-  }
-
-  .md\:ml-1 {
-    margin-left: 0.25rem;
-  }
-
   .md\:mt-52 {
     margin-top: 13rem;
   }
 
-  .md\:mr-16 {
-    margin-right: 4rem;
-  }
-
-  .md\:mr-8 {
-    margin-right: 2rem;
-  }
-
-  .md\:ml-2 {
-    margin-left: 0.5rem;
-  }
-
-  .md\:ml-8 {
-    margin-left: 2rem;
-  }
-
-  .md\:ml-10 {
-    margin-left: 2.5rem;
-  }
-
-  .md\:mt-5 {
-    margin-top: 1.25rem;
+  .md\:mt-7 {
+    margin-top: 1.75rem;
   }
 
   .md\:mt-8 {
     margin-top: 2rem;
   }
 
-  .md\:mt-9 {
-    margin-top: 2.25rem;
-  }
-
   .md\:grid {
     display: grid;
   }
 
-  .md\:h-16 {
-    height: 4rem;
-  }
-
-  .md\:h-14 {
-    height: 3.5rem;
-  }
-
-  .md\:h-11 {
-    height: 2.75rem;
-  }
-
   .md\:h-12 {
     height: 3rem;
+  }
+
+  .md\:h-16 {
+    height: 4rem;
   }
 
   .md\:w-16 {
@@ -1189,24 +1092,12 @@ video {
     width: 10rem;
   }
 
-  .md\:w-\[21rem\] {
-    width: 21rem;
+  .md\:w-\[23rem\] {
+    width: 23rem;
   }
 
   .md\:w-\[41\.6rem\] {
     width: 41.6rem;
-  }
-
-  .md\:w-32 {
-    width: 8rem;
-  }
-
-  .md\:w-56 {
-    width: 14rem;
-  }
-
-  .md\:w-\[23rem\] {
-    width: 23rem;
   }
 
   .md\:grid-cols-2 {
@@ -1222,9 +1113,9 @@ video {
     padding-right: 4rem;
   }
 
-  .md\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
+  .md\:px-44 {
+    padding-left: 11rem;
+    padding-right: 11rem;
   }
 
   .md\:py-28 {
@@ -1232,68 +1123,8 @@ video {
     padding-bottom: 7rem;
   }
 
-  .md\:px-96 {
-    padding-left: 24rem;
-    padding-right: 24rem;
-  }
-
-  .md\:px-40 {
-    padding-left: 10rem;
-    padding-right: 10rem;
-  }
-
-  .md\:px-32 {
-    padding-left: 8rem;
-    padding-right: 8rem;
-  }
-
-  .md\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-
-  .md\:px-72 {
-    padding-left: 18rem;
-    padding-right: 18rem;
-  }
-
-  .md\:px-60 {
-    padding-left: 15rem;
-    padding-right: 15rem;
-  }
-
-  .md\:px-48 {
-    padding-left: 12rem;
-    padding-right: 12rem;
-  }
-
-  .md\:px-44 {
-    padding-left: 11rem;
-    padding-right: 11rem;
-  }
-
-  .md\:pl-\[10\.4rem\] {
-    padding-left: 10.4rem;
-  }
-
-  .md\:pl-28 {
-    padding-left: 7rem;
-  }
-
-  .md\:pl-24 {
-    padding-left: 6rem;
-  }
-
-  .md\:pl-11 {
-    padding-left: 2.75rem;
-  }
-
   .md\:pl-8 {
     padding-left: 2rem;
-  }
-
-  .md\:pr-6 {
-    padding-right: 1.5rem;
   }
 
   .md\:pr-3 {
@@ -1420,28 +1251,88 @@ video {
     margin-left: 16rem;
   }
 
-  .xl\:mr-5 {
-    margin-right: 1.25rem;
+  .xl\:ml-\[28rem\] {
+    margin-left: 28rem;
   }
 
-  .xl\:mr-96 {
-    margin-right: 24rem;
+  .xl\:mr-8 {
+    margin-right: 2rem;
   }
 
   .xl\:mt-0 {
     margin-top: 0px;
   }
 
-  .xl\:mt-20 {
-    margin-top: 5rem;
-  }
-
-  .xl\:mt-12 {
-    margin-top: 3rem;
-  }
-
   .xl\:mt-11 {
     margin-top: 2.75rem;
+  }
+
+  .xl\:mr-6 {
+    margin-right: 1.5rem;
+  }
+
+  .xl\:mr-4 {
+    margin-right: 1rem;
+  }
+
+  .xl\:mr-3 {
+    margin-right: 0.75rem;
+  }
+
+  .xl\:ml-3 {
+    margin-left: 0.75rem;
+  }
+
+  .xl\:mt-1 {
+    margin-top: 0.25rem;
+  }
+
+  .xl\:ml-2 {
+    margin-left: 0.5rem;
+  }
+
+  .xl\:ml-\[31rem\] {
+    margin-left: 31rem;
+  }
+
+  .xl\:ml-\[38rem\] {
+    margin-left: 38rem;
+  }
+
+  .xl\:ml-\[39rem\] {
+    margin-left: 39rem;
+  }
+
+  .xl\:ml-\[38\.5rem\] {
+    margin-left: 38.5rem;
+  }
+
+  .xl\:ml-\[32rem\] {
+    margin-left: 32rem;
+  }
+
+  .xl\:ml-\[37rem\] {
+    margin-left: 37rem;
+  }
+
+  .xl\:ml-\[35rem\] {
+    margin-left: 35rem;
+  }
+
+  .xl\:ml-\[36rem\] {
+    margin-left: 36rem;
+  }
+
+  .xl\:ml-\[34rem\] {
+    margin-left: 34rem;
+  }
+
+  .xl\:ml-\[34\.5rem\] {
+    margin-left: 34.5rem;
+  }
+
+  .xl\:flex {
+    display: flex;
   }
 
   .xl\:hidden {
@@ -1462,69 +1353,60 @@ video {
     height: 2.75rem;
   }
 
-  .xl\:h-14 {
-    height: 3.5rem;
-  }
-
   .xl\:h-16 {
     height: 4rem;
+  }
+
+  .xl\:h-\[3\.15rem\] {
+    height: 3.15rem;
+  }
+
+  .xl\:h-9 {
+    height: 2.25rem;
+  }
+
+  .xl\:h-10 {
+    height: 2.5rem;
   }
 
   .xl\:w-12 {
     width: 3rem;
   }
 
+  .xl\:w-20 {
+    width: 5rem;
+  }
+
   .xl\:w-40 {
     width: 10rem;
-  }
-
-  .xl\:w-72 {
-    width: 18rem;
-  }
-
-  .xl\:w-96 {
-    width: 24rem;
-  }
-
-  .xl\:w-full {
-    width: 100%;
-  }
-
-  .xl\:w-80 {
-    width: 20rem;
-  }
-
-  .xl\:w-\[22rem\] {
-    width: 22rem;
   }
 
   .xl\:w-\[23rem\] {
     width: 23rem;
   }
 
-  .xl\:w-20 {
-    width: 5rem;
+  .xl\:w-\[8\.8rem\] {
+    width: 8.8rem;
+  }
+
+  .xl\:w-full {
+    width: 100%;
+  }
+
+  .xl\:w-32 {
+    width: 8rem;
   }
 
   .xl\:grid-cols-\[auto\2c auto\] {
     grid-template-columns: auto auto;
   }
 
-  .xl\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .xl\:items-center {
+    align-items: center;
   }
 
-  .xl\:grid-cols-\[\[auto\2c auto\]\] {
-    grid-template-columns: [auto auto];
-  }
-
-  .xl\:gap-0 {
-    gap: 0px;
-  }
-
-  .xl\:gap-x-4 {
-    -moz-column-gap: 1rem;
-         column-gap: 1rem;
+  .xl\:justify-center {
+    justify-content: center;
   }
 
   .xl\:gap-x-1 {
@@ -1537,9 +1419,14 @@ video {
     padding-right: 3rem;
   }
 
-  .xl\:px-36 {
-    padding-left: 9rem;
-    padding-right: 9rem;
+  .xl\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .xl\:px-32 {
+    padding-left: 8rem;
+    padding-right: 8rem;
   }
 
   .xl\:px-5 {
@@ -1547,9 +1434,14 @@ video {
     padding-right: 1.25rem;
   }
 
-  .xl\:px-96 {
-    padding-left: 24rem;
-    padding-right: 24rem;
+  .xl\:px-80 {
+    padding-left: 20rem;
+    padding-right: 20rem;
+  }
+
+  .xl\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
   }
 
   .xl\:py-4 {
@@ -1562,19 +1454,44 @@ video {
     padding-bottom: 11rem;
   }
 
-  .xl\:px-32 {
-    padding-left: 8rem;
-    padding-right: 8rem;
+  .xl\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
-  .xl\:px-28 {
-    padding-left: 7rem;
-    padding-right: 7rem;
+  .xl\:py-1 {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
   }
 
-  .xl\:px-24 {
-    padding-left: 6rem;
-    padding-right: 6rem;
+  .xl\:py-1\.5 {
+    padding-top: 0.375rem;
+    padding-bottom: 0.375rem;
+  }
+
+  .xl\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .xl\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .xl\:px-7 {
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
+  }
+
+  .xl\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .xl\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
   }
 
   .xl\:px-20 {
@@ -1582,13 +1499,16 @@ video {
     padding-right: 5rem;
   }
 
-  .xl\:px-80 {
-    padding-left: 20rem;
-    padding-right: 20rem;
-  }
-
   .xl\:pl-4 {
     padding-left: 1rem;
+  }
+
+  .xl\:pl-3 {
+    padding-left: 0.75rem;
+  }
+
+  .xl\:pl-2 {
+    padding-left: 0.5rem;
   }
 
   .xl\:text-2xl {
@@ -1630,20 +1550,12 @@ video {
     margin-left: 20.4rem;
   }
 
-  .\32xl\:ml-\[28\.6rem\] {
-    margin-left: 28.6rem;
-  }
-
   .\32xl\:mr-0 {
     margin-right: 0px;
   }
 
   .\32xl\:mr-4 {
     margin-right: 1rem;
-  }
-
-  .\32xl\:mr-8 {
-    margin-right: 2rem;
   }
 
   .\32xl\:mt-0 {
@@ -1662,10 +1574,6 @@ video {
     margin-top: .65rem;
   }
 
-  .\32xl\:flex {
-    display: flex;
-  }
-
   .\32xl\:grid {
     display: grid;
   }
@@ -1682,20 +1590,12 @@ video {
     height: 0.5rem;
   }
 
-  .\32xl\:h-\[3\.15rem\] {
-    height: 3.15rem;
-  }
-
   .\32xl\:w-40 {
     width: 10rem;
   }
 
   .\32xl\:w-96 {
     width: 24rem;
-  }
-
-  .\32xl\:w-\[14\.5rem\] {
-    width: 14.5rem;
   }
 
   .\32xl\:w-\[23rem\] {
@@ -1722,24 +1622,12 @@ video {
     width: 55rem;
   }
 
-  .\32xl\:w-\[8\.8rem\] {
-    width: 8.8rem;
-  }
-
   .\32xl\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .\32xl\:grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
-  }
-
-  .\32xl\:items-center {
-    align-items: center;
-  }
-
-  .\32xl\:justify-center {
-    justify-content: center;
   }
 
   .\32xl\:px-20 {
