--- a/public/output.css
+++ b/public/output.css
@@ -1397,6 +1397,10 @@ video {
     width: 8rem;
   }
 
+  .xl\:w-16 {
+    width: 4rem;
+  }
+
   .xl\:grid-cols-\[auto\2c auto\] {
     grid-template-columns: auto auto;
   }
@@ -1497,6 +1501,11 @@ video {
   .xl\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
+  }
+
+  .xl\:px-14 {
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
   }
 
   .xl\:pl-4 {
